--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400");
-/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
 /**
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
@@ -305,6 +302,9 @@ html {
 
 *, *:before, *:after {
   box-sizing: inherit; }
+
+
+/* Classes */
 
 .invisible {
   opacity: 0;
@@ -1198,6 +1198,10 @@ select {
 
 .page__header {
   position: relative;
+  background-image: url("../images/1.jpeg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
   color: #ffffff;
   box-shadow: 0 4px 11px rgba(124, 146, 169, 0.5);
   width: 100%; }
