--- a/css/style.css
+++ b/css/style.css
@@ -730,6 +730,16 @@ select {
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee; }
 
+.landing__section__medicine{
+  background-color: #f7f7f7;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee; }
+
+.landing__section__medicine__inverse{
+  background-color: #e8e8e8;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee; }
+
 .navbar {
   position: fixed;
   z-index: 100;
@@ -903,7 +913,7 @@ select {
 .hero__text {
   opacity: 1;
   line-height: 1.7;
-  text-align: left;
+  text-align: center;
   font-size: 1.1em; }
 
 .hero .button {
